@@ -8,6 +8,8 @@ Ver 2.0.22 - in progress
 * Added rounded rectangle and rounded box functions
 * Updated test program for roundedbox + left/right-click support
 * Fixed pie calculation (line-case detection, end-angle clipping)
+* Updated DLL_EXPORT handling and added WIN64 test 
+  (patch contributed by tigerfishdaisy)
 
 Ver 2.0.21 - Thu May 27 21:14:37 PDT 2010
 * Add VC9 project files, source code formatting, fix compiler 
